--- a/package.json
+++ b/package.json
@@ -14,30 +14,26 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "canvas": "^1.6.2",
-    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "enzyme": "^2.8.2",
-    "eslint": "^3.13.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
     "html-webpack-plugin": "^2.28.0",
-    "jsdom": "10.1.0",
-    "jsdom-global": "2.1.1",
-    "mocha": "^3.2.0",
-    "nyc": "^10.1.2",
+    "jest": "^20.0.0",
     "react-addons-test-utils": "^15.5.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0-rc.4"
   },
   "dependencies": {
     "autobind-decorator": "^1.3.4",
-    "chai": "^3.5.0",
     "eventemitter3": "^2.0.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "sinon": "^1.17.7",
     "webpack-dev-server": "2.2.0-rc.0"
   },
   "babel": {
@@ -60,9 +56,9 @@
     "start": "node ./node_modules/.bin/webpack-dev-server --config ./tools/webpack.config.js --hot --open",
     "build": "node ./node_modules/.bin/webpack --config ./tools/webpack.config.js",
     "lint": "node ./node_modules/.bin/eslint --config ./tools/.eslintrc.js ./src",
-    "tdd": "node ./node_modules/.bin/mocha --inspect --watch --require ./tools/mocha-setup.js ./src/**/__tests__/*-spec.js --watch --opts .tools/mocha.opts  ./src/**/__tests__",
-    "test": "node ./node_modules/.bin/mocha --require ./tools/mocha-setup.js ./src/**/*-spec.js --opts .tools/mocha.opts ./src/**/__tests__",
-    "coverage": "node ./node_modules/.bin/nyc --all --reporter=html npm run test"
+    "tdd": "./node_modules/.bin/jest --watchAll",
+    "test": "./node_modules/.bin/jest",
+    "coverage": "./node_modules/.bin/jest --coverage"
   },
   "author": "CoderK",
   "license": "ISC"
